Use gulp build asset

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <script type="text/javascript" src="dist/loggly-tracker.js" async></script>
-  <script type="text/javascript" src="dist/bundle.js" async></script>
+  <script src="dist/article-84bcdcd554.js" type="text/javascript"></script>
 </head>
 
 <body>
